--- a/gndjf/ArtistDetailed/ArtistDetailed.xib
+++ b/gndjf/ArtistDetailed/ArtistDetailed.xib
@@ -10,67 +10,32 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ArtistDetailedViewController" customModule="gndjf" customModuleProvider="target">
             <connections>
-                <outlet property="view" destination="Of2-DN-zBA" id="zAx-9h-iIA"/>
+                <outlet property="view" destination="6Uq-kS-vhE" id="y4j-tp-BGv"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="Of2-DN-zBA">
+        <view contentMode="scaleToFill" id="6Uq-kS-vhE">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="Zcr-dD-RNJ">
-                    <rect key="frame" x="0.0" y="34" width="414" height="828"/>
-                    <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MD3-iZ-7FG">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="165.5"/>
-                            <subviews>
-                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gkv-rv-0Rb">
-                                    <rect key="frame" x="0.0" y="0.0" width="202" height="165.5"/>
-                                </imageView>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yJm-JA-vsJ">
-                                    <rect key="frame" x="212" y="0.0" width="202" height="165.5"/>
-                                    <attributedString key="attributedText">
-                                        <fragment content="Artist name or nickname">
-                                            <attributes>
-                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
-                                                <font key="NSFont" size="30" name="Futura-Medium"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-                                            </attributes>
-                                        </fragment>
-                                    </attributedString>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <constraints>
-                                <constraint firstItem="yJm-JA-vsJ" firstAttribute="width" secondItem="gkv-rv-0Rb" secondAttribute="width" id="TJ4-Ar-ddc"/>
-                            </constraints>
-                        </stackView>
-                        <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="interactive" style="insetGrouped" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="LUb-02-XVz">
-                            <rect key="frame" x="0.0" y="171.5" width="414" height="656.5"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </tableView>
-                    </subviews>
-                    <constraints>
-                        <constraint firstItem="MD3-iZ-7FG" firstAttribute="height" secondItem="Zcr-dD-RNJ" secondAttribute="height" multiplier="0.2" id="KKl-Hu-aid"/>
-                    </constraints>
-                </stackView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="VZd-fL-Zyp">
+                    <rect key="frame" x="20" y="151" width="357" height="553"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="QmE-nu-fRb"/>
+                        <outlet property="delegate" destination="-1" id="Tfn-1H-Vid"/>
+                    </connections>
+                </tableView>
             </subviews>
-            <viewLayoutGuide key="safeArea" id="Q0g-Zl-iTT"/>
-            <color key="backgroundColor" systemColor="tertiaryLabelColor"/>
-            <constraints>
-                <constraint firstItem="Q0g-Zl-iTT" firstAttribute="bottom" secondItem="Zcr-dD-RNJ" secondAttribute="bottom" id="KPO-TW-jpf"/>
-                <constraint firstItem="Zcr-dD-RNJ" firstAttribute="centerX" secondItem="Of2-DN-zBA" secondAttribute="centerX" id="Ktk-TA-ZEO"/>
-                <constraint firstItem="Zcr-dD-RNJ" firstAttribute="centerY" secondItem="Of2-DN-zBA" secondAttribute="centerY" id="bpr-Sm-UYk"/>
-                <constraint firstItem="Zcr-dD-RNJ" firstAttribute="leading" secondItem="Q0g-Zl-iTT" secondAttribute="leading" id="eGV-ck-k1t"/>
-                <constraint firstItem="Q0g-Zl-iTT" firstAttribute="trailing" secondItem="Zcr-dD-RNJ" secondAttribute="trailing" id="lln-w4-lrx"/>
-            </constraints>
-            <point key="canvasLocation" x="307" y="104"/>
+            <viewLayoutGuide key="safeArea" id="3W1-2P-uB2"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <point key="canvasLocation" x="269.56521739130437" y="61.607142857142854"/>
         </view>
     </objects>
     <resources>
-        <systemColor name="tertiaryLabelColor">
-            <color red="0.23529411764705882" green="0.23529411764705882" blue="0.2627450980392157" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
